--- a/TeacherPortalAs/wwwroot/index.html
+++ b/TeacherPortalAs/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome - только одна ссылка -->
+    <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- Наши стили -->
     <link href="css/app.css" rel="stylesheet" />
@@ -32,9 +32,16 @@
         <span class="dismiss">×</span>
     </div>
     
-    <!-- Добавляем Bootstrap JS и его зависимости -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+    
+    <script>
+        window.blazorConfig = {
+            cacheBootResources: false,
+            debugBuild: true,
+            linkerEnabled: false
+        };
+    </script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/site.js"></script>
 </body>
