--- a/TeacherPortalAs/wwwroot/index.html
+++ b/TeacherPortalAs/wwwroot/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Учительский портал</title>
+    <title>TeacherPortalAs</title>
     <base href="/" />
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Потом уже Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Сначала подключаем наши стили -->
+    <link rel="stylesheet" href="css/app.css" />
+    <link href="css/dialogs.css" rel="stylesheet" />
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- Наши стили -->
-    <link href="css/app.css" rel="stylesheet" />
     <link href="TeacherPortalAs.styles.css" rel="stylesheet" />
     <link href="css/AdminComponents.css" rel="stylesheet" />
     <link href="css/loading.css" rel="stylesheet" />
